# openadnet

./: .gitignore  README.md  hello.py  pyproject.toml
.github/workflows/: pylint.yml
conf/gnn_sweep/: config.yaml
docs/: pyg_gnn.md
examples/: fit_hf_from_csv.py  holdout_regression.py  load_hf_predict.py  multitask_hf_cv.py  notebook_graph_with_descriptors.py  quick_cv_gnn_subset.py  quick_cv_hf_subset.py
examples/pymol-rs-viewer-local/: README.md  index.html  package-lock.json  package.json  vite.config.js
examples/pymol-rs-viewer-local/src/: main.js
notebooks/: 01.ipynb  02.ipynb  Untitled.ipynb  conformal_quantile_regression.ipynb  delta_learning_tree_dl.ipynb  ensemble_gnn_tree.ipynb  ensemble_models.ipynb  hf_models.ipynb  phys_gated_morgan_quantile_moe.ipynb  pyg_gnn_regression.ipynb
notebooks/outputs/: baseline_cv_custom.json
outputs/: baseline_cv_cache.json  baseline_cv_results.csv  baseline_cv_results.html
project/tmap/: __init__.py  annotated_svg.py  tmap.py
scripts/: cv_chemberta_regressor.py  cv_ensemble_fp_gnn.py  cv_gnn_regressor.py  cv_hf_regressor.py  hydra_gnn_sweep.py  plot_pec50_lollipops.py  readme_from_baseline_cache.py  submit_top5_baselines.py  tmap_train_html.py  write_submission.py
src/: baseline.py  delta_learning.py  features_data.py  fp_embedding_compare.py  load_data.py  morgan_fp_viz.py  reporting.py  score_data.py  score_data_cqr.py  submission.py  tmap_viewer_html.py  uncertainty.py  viz.py
src/models/: __init__.py  cv_dl.py  ensemble.py  gnn_regression.py  hf_regression.py  moe_quantile.py
src/models/data/: __init__.py  graph.py  transformer.py
src/models/nn/: __init__.py  pyg_architectures.py  pyg_regressor.py  registry.py
src/models/pt/: __init__.py  attention.py  (+2 more)
src/uncertainty/: __init__.py  conformal_quantile.py  plotting.py
tests/: test_cluster.py  test_conformal_quantile.py  test_data.py  test_delta_learning.py  test_dl_smoke.py  test_ensemble.py  test_fingerprints.py  test_fp_embedding_compare.py  test_graph_descriptors.py  test_moe_quantile.py  test_plotting.py  test_pyg_architectures.py  test_rdkit.py  test_submission.py  test_tmap.py  test_tmap_annotated.py  test_tmap_test_data.py
