[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openadnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface_hub",
    "rdkit",
    "scikit-learn",
    "joblib",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "better-tables>=1.0.2",
    "tqdm",
]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = [
    "features_data",
    "load_data",
    "score_data",
    "baseline",
    "viz",
    "uncertainty",
    "reporting",
    "submission",
]
