[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openadnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface_hub",
    "rdkit",
    "scikit-learn",
    "joblib",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "umap-learn",
    "better-tables>=1.0.2",
    "tqdm",
]

[project.optional-dependencies]
dl = [
    "torch>=2.0",
    "transformers>=4.36",
    "torch-geometric>=2.4",
]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = [
    "features_data",
    "load_data",
    "score_data",
    "score_data_cqr",
    "baseline",
    "viz",
    "reporting",
    "submission",
    "tmap_viewer_html",
    "fp_embedding_compare",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["models*", "uncertainty*"]
